chainsaw/tests/mutation-policy/assert-mutation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    environment: "test"
spec:
  containers:
  - name: nginx
    image: nginx:latest
